
V4.0.8 Beta 3:
[Control Loop]
* Added: Internal control drivers for overridable yoke (New config required)
* Added: Ability to not drive throttle directly with autothrottle
* Added: CWS interrupt ability
* Added: More flexible bank limit system with overrides (New config required)
* Changed: Tweaked rate scheme slightly

[Logic]
* Added: Ability to not drive throttle directly with autothrottle
* Added: More flexible bank limit system with overrides (New config required)
* Changed: Renamed reduc-agl-ft to accel-ft
* Changed: Renamed togaspd to toga-spd
* Changed: Renamed lat-agl-ft to lnav-ft

---------------------------------------------------------------------------------------------------------------------

V4.0.7:
[Control Loop]
* Added: New rate based FLCH (speed on pitch) controller
* Added: Ability to use a third NAV radio
* Added: Wings Level mode
* Fixed: If all APs and FDs are off, and the autopilot is engaged in V/S mode, the pitch might jerk
* Fixed: Flare law shallowing up too early and floating
* Fixed: Really slow response in some situations
* Fixed: Strange bug with glideslope
* Changed: Flight Director Pitch now outputs in degrees (in Canvas, you can just translate it the same as pitch scale)

[Logic]
* Added: Ability to define when APs and A/THR are available
* Added: APs and A/THR trips off if respective system is unavailable
* Added: Ability to set blank mode
* Added: Ability to start with flight directors on by default
* Added: Armed modes disarm if they become unavailable
* Added: Ability to use a third NAV radio
* Added: Built in VS/FPA switching logic
* Added: Wings Level mode
* Fixed: Bad handling of radio selection
* Fixed: LOC capturing too early on shallow intercept and increasing intercept angle
* Fixed: Flare engagement

[GUI]
* Added: NAV source toggles for all 3 radios

---------------------------------------------------------------------------------------------------------------------

V4.0.6:
[Control Loop]